# skunkworks

./: .gitignore  .gitmodules  AndroidManifest.xml  CMakeLists.txt  README  README.md  android_main.cpp  build.sh  main.c  main.cpp  main.m  main.mm  toolchain.sh
assets/players/darksaber/: attribution.txt
assets/players/darksaber/sprite/: idle.json  idle.tps  walk.json  walk.tps
base/: CMakeLists.txt  platform.hpp
base/hash/: stringhash.hpp
base/parser/: json.cpp  json.hpp
base/string/: stringenum.hpp  stringhash.hpp
base/system/: info.cpp  info.hpp  intrinsics.hpp  library.cpp  library.hpp  stacktrace.cpp  stacktrace.hpp  window.cpp  window.hpp
cmake/: AndroidNdkGdb.cmake  FindBFD.cmake  FindEGL.cmake  FindEGLPLUS.cmake  FindGL.cmake  FindGLCORE.cmake  FindGLES2.cmake  FindGLES3.cmake  FindGLEW.cmake  FindMSGPACK.cmake  FindOALPLUS.cmake  FindOGLPLUS.cmake  FindOIS.cmake  FindPLATT.cmake  FindSDL2.cmake  FindZEUG.cmake  FindZMQ.cmake  ToolchainLINUX.cmake
framework/: CMakeLists.txt  framework.cpp  framework.hpp  framework_api.h  framework_api.hpp  plugin_api.hpp
plugins/: CMakeLists.txt
plugins/game/: CMakeLists.txt  entitymanager.cpp  entitymanager.hpp  plugin.cpp  plugin.hpp
plugins/graphics/: CMakeLists.txt  error.hpp  plugin.cpp  plugin.hpp  render.cpp  render.hpp  sprite.cpp  sprite.hpp
plugins/graphics/opengl/: buffer.cpp  buffer.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  stb_image.h  texture.cpp  texture.hpp
plugins/input/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/physics/: CMakeLists.txt  plugin.cpp  plugin.hpp  step.cpp
source/: CMakeLists.txt
source/cmake/: AndroidNdkGdb.cmake  FindEGL.cmake  FindGLES2.cmake  FindIPP.cmake  FindMSGPACK.cmake  ToolchainANDROID.cmake
source/framework/: CMakeLists.txt  framework.cpp  framework.hpp  framework_api.hpp
source/plugins/common/: entity.hpp
source/plugins/game/: CMakeLists.txt  entitymanager.hpp  plugin.hpp
source/plugins/graphics/: plugin.cpp
source/plugins/input/: CMakeLists.txt
source/plugins/physics/: plugin.cpp  step.cpp  step.hpp
tools/: analyse.sh  build.sh  build_assets.sh  build_toolchains.sh
